# wayfinder-aura

./: .evscope.py  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  INSTALL-UBUNTU.md  LICENSE  PRIVACY.md  README.md  SHIPPING.md  STEAMDECK-INSTALL-LOG.md  SUPPORT.md  WEBSITE_COPY_BRIEF.md  benchmark.py  build-appimage.sh  build.sh  injector.py  launch-mac.sh  launch-wayfinder-aura.sh  launch-wayfinder-voice.sh  license.py  main.py  ollama_manager.py  postprocessor.py  pyproject.toml  recorder.py  requirements-optional.txt  requirements.txt  status_overlay.py  toggle-recording.sh  transcriber.py  trigger_hide.py  trigger_record.py  trigger_style.py  wayfinder-aura-macos.spec  wayfinder-aura.desktop  wayfinder-aura.spec  wayfinder-voice.desktop  wayfinder-voice.spec  (+1 more)
.claude/skills/check/: README.md  SKILL.md  TEMPLATE.md
.claude/skills/codex/: SKILL.md
.clinerules/: environment.md
.github/workflows/: ci.yml
.tmp-flathub-handoff/: OWNER-FLATHUB-PR.md
assets/: icon.icns
catalog/: v1.json
docs/: FLATHUB-HANDOFF.md  FLATHUB-HUMAN-SUBMIT.md  FLATHUB-LAUNCH-HANDOFF-2026-07-16.md  GO-LIVE-INPUTS.md  HANDOFF-tray-f3-fixes-2026-07-06.md  LAUNCH-HARDENING-PLAN.md  LAUNCH-QA-CHECKLIST.md  MODEL-CATALOG-REMOTE.md  MODELS-CDN-SETUP.md  PRESENTATION-LAUNCH-PLAN.md  SECURITY-HARDENING-PLAN.md  SECURITY-REVIEW.md  SHIP-PLAN-2026-07.md  SHIP-READINESS.md  SHIP-VERIFICATION-RUNBOOK.md  SIGNOFF.md  STOREFRONT-MARKETING-HANDOFF.md  qwen-plan-check.md
docs/superpowers/specs/: 2026-05-08-ydotool-auto-spawn-design.md
flatpak/: BUILDING.md  STRATEGY.md  flatpak-requirements.txt  generate-pip-sources.sh  io.github.user.WayfinderAura.desktop  io.github.user.WayfinderAura.metainfo.xml  io.github.user.WayfinderAura.yml  io.github.user.WayfinderVoice.desktop  io.github.user.WayfinderVoice.metainfo.xml  io.github.user.WayfinderVoice.yml  io.github.wayfindercollective.WayfinderAura.desktop  io.github.wayfindercollective.WayfinderAura.metainfo.xml  io.github.wayfindercollective.WayfinderAura.yml  io.wayfindercollective.WayfinderAura.desktop  io.wayfindercollective.WayfinderAura.metainfo.xml  io.wayfindercollective.WayfinderAura.yml  prepare-release-manifest.py  python-deps.json  resize-icons.py  wayfinder-aura-launcher.sh  wayfinder-voice-launcher.sh
infra/models-cdn/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
infra/models-cdn/src/: auth.test.ts  auth.ts  index.ts
screenshots/: README.md
scripts/: .gitignore  benchmark.py  benchmark_llama_cpp.py  build-appimage.sh  capture_store_screenshots.py  eval_asr.py  eval_tones.py  export_model_catalog.py  gen_icons.py  gen_wordlists.py  model_scout.py  publish_model_catalog.py  r2_multipart_upload.py  r2_worker_multipart_upload.py  ship_preflight.py  soak.py  switch_backend.py  test_groq.py  trigger_record.py  upload-models-r2.sh  verify_structure.py  wayfinder-aura-launcher-steamdeck.sh
scripts/ci/: check-release-license-defaults.py  check-storefront-readiness.py  install-glslc-if-needed.sh
scripts/design/: hero_mock.py
scripts/steamdeck/: README.md  install-steamdeck.sh  r4-f3-bridge.py  uninstall-steamdeck.sh  wayfinder-aura-show-or-start.py  wayfinder-aura.desktop  wayfinder-mode-supervisor.py  wayfinder-trigger-daemon.py
scripts/steamdeck/systemd/: r4-f3-bridge.service  wayfinder-aura-failed.service  wayfinder-aura.service  wayfinder-aura.service.d-flatpak.conf  wayfinder-mode-supervisor.service  wayfinder-trigger.service
scripts/tone_eval/: __init__.py  corpus.py  judge.py  metrics.py  report.py
src/wayfinder/: MIGRATION.md  __init__.py  __main__.py  app.py  config.py  license.py  model_catalog.py  models_cdn.py  state.py
src/wayfinder/core/: __init__.py  gm_asr.py  injector.py  model_updates.py  ollama_manager.py  postprocessor.py  recorder.py  setup.py  transcriber.py  voice_profile.py  wordlist.py
src/wayfinder/feedback/: __init__.py  audio.py  rumble.py
src/wayfinder/hotkeys/: __init__.py  dbus.py  evdev.py  pynput_listener.py  socket.py  types.py
src/wayfinder/integrations/: __init__.py  gamemode.py
src/wayfinder/ui/: __init__.py  components.py  hero_render.py  icons.py  overlay.py  overlay_geometry.py  setup_pane.py  stdin_reader.py  theme.py  tray_icon.py  welcome.py
src/wayfinder/ui/dialogs/: __init__.py  calibration.py  setup_wizard.py
src/wayfinder/utils/: __init__.py  audio_ducker.py  fs_security.py  gpu.py  gpu_simple.py  lazy_imports.py  logging.py  overlay_process.py  platform.py  timeout.py
tests/: __init__.py  conftest.py  test_backend_auto.py  test_benchmark.py  test_components.py  test_config.py  test_config_unification.py  test_design_ratchet.py  test_dev_unlock.py  test_dropdown_geometry.py  test_e2e_flows.py  test_e2e_setup.py  test_e2e_ui.py  test_flatpak_release_manifest.py  test_fs_security.py  test_game_mode_app.py  test_gamemode.py  test_gm_three_fixes.py  test_golden_asr.py  test_gpu.py  test_gpu_premium.py  test_hero_render.py  test_hotkey_backend.py  test_hotkeys.py  test_icons.py  test_injector.py  test_integration.py  test_kde_hotkey_defer.py  test_license.py  test_live_smoke.py  test_main_launch.py  test_mode_supervisor.py  test_model_catalog.py  test_model_download.py  test_model_downloader.py  test_models_cdn.py  test_orchestration.py  test_overlay.py  test_overlay_geometry.py  test_palette_parity.py  (+23 more)
tests/golden_audio/: generate.py  manifest.py
