[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wayfinder-aura"
# Keep in sync with src/wayfinder/__init__.py __version__
version = "1.1.1"
description = "Wayfinder Aura - Local voice dictation for Linux using whisper.cpp"
readme = "README.md"
license = {text = "Elastic-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Wayfinder Aura Contributors"}
]
keywords = ["voice", "dictation", "whisper", "speech-to-text", "linux", "wayland", "aura"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "customtkinter>=5.2.0",
    "requests>=2.28.0",
    "PyQt6>=6.5.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "evdev>=1.6.0; sys_platform == 'linux'",
    "pynput>=1.7.6",
    "pyautogui>=0.9.54; sys_platform == 'darwin'",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "openai>=1.0.0",
    "groq>=0.4.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]
gpu = [
    "faster-whisper>=1.0.0",
    "torch>=2.0.0",
]
llm = [
    "anthropic>=0.40.0",
    "llama-cpp-python>=0.2.0",
]

[project.scripts]
wayfinder-aura = "wayfinder:main"

[project.gui-scripts]
wayfinder-aura-gui = "wayfinder:main"

[project.urls]
Homepage = "https://github.com/wayfindercollective/wayfinder-aura"
Repository = "https://github.com/wayfindercollective/wayfinder-aura"
Issues = "https://github.com/wayfindercollective/wayfinder-aura/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["wayfinder*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
wayfinder = ["../assets/*", "../assets/icons/*.png"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__", "*.pyc"]

# Ruff linter configuration
[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict parameter
]

[tool.ruff.lint.isort]
known-first-party = ["wayfinder"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --timeout=60"
markers = [
    "unit: Fast unit tests with no I/O",
    "integration: Cross-module integration tests",
    "e2e: End-to-end flow tests",
    "ui: Tests requiring a display/Tk (skip in headless CI)",
    "slow: Slow tests like GPU benchmarks or model downloads",
    "network: Tests requiring network access (cloud APIs)",
    "perf: Wall-clock timing budgets (load-sensitive; run locally/nightly, excluded from the gating run)",
]

# Mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
